[package]
name = "flags"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["tracing"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env"] }
getrandom = "0.2.15"
headers = "0.4.0"
nanoid = "0.4.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
